declarative/processor/src/test/resources/good/dataset named graph method is instance.java
package x;

import com.inrupt.rdf.wrapping.declarative.annotation.Dataset;
import com.inrupt.rdf.wrapping.declarative.annotation.Graph;
import com.inrupt.rdf.wrapping.declarative.annotation.NamedGraph;

@Dataset
interface X {
    @NamedGraph("x")
    Y x();

    @Graph
    interface Y {
    }
}
